--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Data driven contact cards by Hmabiola</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="rot"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
